# fastapi-onion-template

./: .env.dev.example  .env.test.example  .gitignore  .logging.dev.yml  .logging.yml  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
docker/: Dockerfile
docker/compose/: docker-compose.auth.dev.override.yml  docker-compose.auth.test.override.yml  docker-compose.auth.yml
docker/scripts/: alembic.sh  dev_entrypoint.sh  entrypoint.sh  test_entrypoint.sh
src/: main.py
src/infrastructure/: config.py  logger.py
src/infrastructure/db/: base.py
src/infrastructure/db/migrations/: env.py
src/presentation/api/v1/: __init__.py
src/presentation/dependencies/: db.py  settings.py
