[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["przdtl <y.timko56@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["all"], version = "^0.116.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
python-ulid = {extras = ["pydantic"], version = "^3.1.0"}
asyncpg = "^0.30.0"
alembic = "^1.16.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"

[tool.pytest.ini_options]
testpaths = [
    "src/tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

